--- a/src/main/resources/templates/country.html
+++ b/src/main/resources/templates/country.html
@@ -26,6 +26,19 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- Bootstrap 5 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    
+     <!-- Bootstrap icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+    <title>Kindacode.com</title>
+    
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
  <script src="assets/js/country.js"></script>
@@ -500,7 +513,7 @@
 
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Table with hoverable rows</h5>
+              <h5 class="card-title"></h5>
              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal" data-bs-whatever="@mdo">New Country</button>
                
               <table class="table table-hover">
@@ -522,8 +535,10 @@
                     <td>
                    <!-- <button type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#editModal" id="editButton" data-bs-whatever="@mdo">Edit</button> -->
                    <div class="btn-group">
-                   <a th:href="@{/country/findById/(id=${country.id})}" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editModal" id="editButton">Edit</a>
-                   <a th:href="@{/country/delete/(id=${country.id})}" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal" id="deleteButton">Delete</a>
+                   <a th:href="@{/country/findById/(id=${country.id})}" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#editModal" id="editButton"><i class="bi bi-chat-left-text"></i></a>
+                   <a class="btn btn-success" id="detailsButton" data-bs-target="#detailsModal" data-bs-toggle="modal" th:href="@{/country/findById/(id=${country.id})}"><i class="bi bi-book"></i></a>
+                   <a th:href="@{/country/delete/(id=${country.id})}" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal" id="deleteButton"><i class="bi bi-trash text-light"></i></a>
+                   
                    </div> 
                     </td>
                     
@@ -675,6 +690,60 @@
   </div>
 </div>
 <!-- End Delete Country Model -->
+
+<!-- Country Details -->
+<div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Country Details</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+        
+        <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">ID:</label>
+            <input type="text" class="form-control" id="idDetails" name="id" readonly>
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Description:</label>
+            <input type="text" class="form-control" id="descriptionDetails" name="description" readonly>
+          </div>
+          
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Capital:</label>
+            <input type="text" class="form-control" id="capitalDetails" name="capital" readonly>
+          </div>
+          
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Code:</label>
+            <input type="text" class="form-control" id="codeDetails" name="code" readonly>
+          </div>
+          
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Last Updated By:</label>
+            <input type="text" class="form-control" id="lastModifiedByDetails" name="lastModifiedBy" readonly>
+          </div>
+          
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Last Updated At:</label>
+            <input type="text" class="form-control" id="lastModifiedDateDetails" name="lastModifiedDate" readonly>
+          </div>
+          
+          <div class="mb-3">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- End Country Details -->
 
 <!-- End Models-->
 
