--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Country Management Page</title>
+  <title>Location Management Page</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -25,6 +25,23 @@
   <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- Bootstrap 5 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    
+     <!-- Bootstrap icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+    <title>Kindacode.com</title>
+    
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+ <script src="assets/js/location.js"></script>
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -273,7 +290,7 @@
 
     <ul class="sidebar-nav" id="sidebar-nav">
 
-      <li class="nav-item">
+     <li class="nav-item">
         <a class="nav-link " th:href="@{/index}">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
@@ -479,7 +496,7 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Country Management Page</h1>
+      <h1>Location Management Page</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -488,7 +505,7 @@
         </ol>
       </nav>
     </div><!-- End Page Title -->
-    <h1>List of Countries</h1>
+    <h1>List of Locations</h1>
 
     <section class="section">
       <div class="row">
@@ -496,8 +513,39 @@
 
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Example Card</h5>
-              <p>This is an examle page with no contrnt. You can use it as a starter for your custom pages.</p>
+              <h5 class="card-title"></h5>
+             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal" data-bs-whatever="@mdo">New Location</button>
+               
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">City</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Details</th>
+                    <th scope="col">Actions</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr th:each="location:${locations}">
+                    <td th:text="${location.id}"></td>
+                    <td th:text="${location.city}"></td>
+                    <td th:text="${location.description}"></td>
+                    <td th:text="${location.details}"></td>
+                    <td>
+                   <!-- <button type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#editModal" id="editButton" data-bs-whatever="@mdo">Edit</button> -->
+                   <div class="btn-group">
+                   <a th:href="@{/location/findById/(id=${location.id})}" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#editModal" id="editButton"><i class="bi bi-chat-left-text"></i></a>
+                   <a class="btn btn-success" id="detailsButton" data-bs-target="#detailsModal" data-bs-toggle="modal" th:href="@{/location/findById/(id=${location.id})}"><i class="bi bi-book"></i></a>
+                   <a th:href="@{/location/delete/(id=${location.id})}" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal" id="deleteButton"><i class="bi bi-trash text-light"></i></a>
+                   
+                   </div> 
+                    </td>
+                    
+                  </tr>
+                </tbody>
+              </table>
+              
             </div>
           </div>
 
@@ -508,15 +556,253 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Example Card</h5>
-              <p>This is an examle page with no contrnt. You can use it as a starter for your custom pages.</p>
+              
+              
             </div>
           </div>
-
+          
         </div>
       </div>
     </section>
 
   </main><!-- End #main -->
+  
+  <!-- Bootstrap 5.1 Models -->
+  
+  <!-- Add Location form -->
+ <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New Location</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form th:action="@{/location/addNew}" method="post">
+        
+         <div class="mb-3">
+            <label for="idAdd" class="col-form-label">Id:</label>
+            <input type="text" class="form-control" id="idAdd" name="id" disabled>
+          </div>
+          <div class="mb-3">
+          <select class="form-select" aria-label="Default select example" name="countryid" for="ddlCountryAdd" id="ddlCountryAdd">
+  			<option selected>-SELECT-</option>
+  			<option th:each="country : ${countries}"
+				        th:value="${country.id}"
+				        th:text="${country.description}"></option>
+			</select>
+          </div>
+          
+          <div class="mb-3">
+          <select class="form-select" aria-label="Default select example" name="stateid" for="ddlStateAdd" id="ddlStateAdd">
+  			<option selected>-SELECT-</option>
+  			<option th:each="state : ${states}"
+				        th:value="${state.id}"
+				        th:text="${state.name}"></option>
+			</select>
+          </div>
+          
+          <div class="mb-3">
+            <label for="nameAdd" class="col-form-label">Description:</label>
+            <input type="text" class="form-control" id="descriptionAdd" name="description" required>
+          </div>
+          
+          <div class="mb-3">
+            <label for="capitalAdd" class="col-form-label">City:</label>
+            <input type="text" class="form-control" id="cityAdd" name="city" required>
+          </div>
+          
+          <div class="mb-3">
+            <label for="codeAdd" class="col-form-label">Address:</label>
+            <input type="text" class="form-control" id="addressAdd" name="address" required>
+          </div>
+          
+          <div class="mb-3">
+            <label for="detailsAdd" class="col-form-label">Details:</label>
+            <input type="text" class="form-control" id="detailsAdd" name="details">
+          </div>
+          
+          
+          <div class="mb-3">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End Add Location form -->
+
+<!-- Edit Location form -->
+<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Edit State Record</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form th:action="@{/location/update}" method="put">
+        
+        <div class="mb-3">
+            <label for="idAdd" class="col-form-label">Id:</label>
+            <input type="text" class="form-control" id="idEdit" name="id" readonly>
+          </div>
+          <div class="mb-3">
+          <select class="form-select" aria-label="Default select example" name="countryid" for="ddlCountryEdit" id="ddlCountryEdit">
+  			<option selected>-SELECT-</option>
+  			<option th:each="country : ${countries}"
+				        th:value="${country.id}"
+				        th:text="${country.description}"></option>
+			</select>
+          </div>
+          
+          <div class="mb-3">
+          <select class="form-select" aria-label="Default select example" name="stateid" for="ddlStateEdit" id="ddlStateEdit">
+  			<option selected>-SELECT-</option>
+  			<option th:each="state : ${states}"
+				        th:value="${state.id}"
+				        th:text="${state.name}"></option>
+			</select>
+          </div>
+          
+          <div class="mb-3">
+            <label for="nameAdd" class="col-form-label">Description:</label>
+            <input type="text" class="form-control" id="descriptionEdit" name="description" required>
+          </div>
+          
+          <div class="mb-3">
+            <label for="capitalAdd" class="col-form-label">City:</label>
+            <input type="text" class="form-control" id="cityEdit" name="city" required>
+          </div>
+          
+          <div class="mb-3">
+            <label for="codeAdd" class="col-form-label">Address:</label>
+            <input type="text" class="form-control" id="addressEdit" name="address" required>
+          </div>
+          
+          <div class="mb-3">
+            <label for="detailsAdd" class="col-form-label">Details:</label>
+            <input type="text" class="form-control" id="detailsEdit" name="details">
+          </div>
+          
+          
+          <div class="mb-3">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- End Update Location form -->
+
+<!-- Delete Country Model -->
+<div class="modal" id ="deleteModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Delete Location</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>This record will be deleted.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <a class="btn btn-primary" id="confirmDeleteButton" href="">Save changes</a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End Delete Country Model -->
+
+<!-- Location Details -->
+
+<div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Location Details</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+        
+        <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">ID:</label>
+            <input type="text" class="form-control" id="idDetails" name="id" readonly>
+          </div>
+          
+          <div class="mb-3">
+          <select class="form-select" aria-label="Default select example" name="countryid" for="ddlCountryDetails" id="ddlCountryDetails">
+  			<option selected>-SELECT-</option>
+  			<option th:each="country : ${countries}"
+				        th:value="${country.id}"
+				        th:text="${country.description}"></option>
+			</select>
+          </div>
+          
+          <div class="mb-3">
+          <select class="form-select" aria-label="Default select example" name="stateid" for="ddlStateEdit" id="ddlStateEdit">
+  			<option selected>-SELECT-</option>
+  			<option th:each="state : ${states}"
+				        th:value="${state.id}"
+				        th:text="${state.name}"></option>
+			</select>
+          </div>
+          
+          
+          
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Description:</label>
+            <input type="text" class="form-control" id="descriptionDetails" name="description" readonly>
+          </div>
+          
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">City:</label>
+            <input type="text" class="form-control" id="cityDetails" name="city" readonly>
+          </div>
+          
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Address:</label>
+            <input type="text" class="form-control" id="addressDetails" name="address" readonly>
+          </div>
+          
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Details:</label>
+            <input type="text" class="form-control" id="detailsDetails" name="details" readonly>
+          </div>
+          
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Last Updated By:</label>
+            <input type="text" class="form-control" id="lastModifiedByDetails" name="lastModifiedByDetails" readonly>
+          </div>
+          
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Last Updated At:</label>
+            <input type="text" class="form-control" id="lastModifiedDateDetails" name="lastModifiedDateDatails" readonly>
+          </div>
+          
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- End Country Details -->
+
+<!-- End Models-->
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
@@ -534,6 +820,8 @@
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
+
+
   <!-- Vendor JS Files -->
   <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -546,7 +834,9 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+   <script src="assets/js/location.js"></script>
+   
+   </script>
 </body>
 
 </html>
