--- a/src/main/resources/templates/country.html
+++ b/src/main/resources/templates/country.html
@@ -506,6 +506,25 @@
       </nav>
     </div><!-- End Page Title -->
     <h1>List of Countries</h1>
+    
+    <table class="table table-hover" id="byCapital">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Capital</th>
+                    <th scope="col">Code</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr th:each="cap:${capitalData}">
+                    <td th:text="${cap.id}"></td>
+                    <td th:text="${cap.description}"></td>
+                    <td th:text="${cap.capital}"></td>
+                    <td th:text=${cap.code}></td>
+                  </tr>
+                </tbody>
+              </table>
 
     <section class="section">
       <div class="row">
@@ -576,7 +595,7 @@
     <p></p>
    
       </form>
-    <table class="table table-hover" id="byCapital">
+   <!-- <table class="table table-hover" id="byCapital">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
@@ -593,7 +612,7 @@
                     <td th:text=${cap.code}></td>
                   </tr>
                 </tbody>
-              </table>
+              </table> -->
             </div>
           </div>
           
