--- a/src/main/resources/templates/vehicle.html
+++ b/src/main/resources/templates/vehicle.html
@@ -490,6 +490,25 @@
     </div><!-- End Page Title -->
     <h1>List of Countries</h1>
 
+<table class="table table-hover" id="byCapital">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Capital</th>
+                    <th scope="col">Code</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr th:each="cap:${capitalData}">
+                    <td th:text="${cap.id}"></td>
+                    <td th:text="${cap.description}"></td>
+                    <td th:text="${cap.capital}"></td>
+                    <td th:text=${cap.code}></td>
+                  </tr>
+                </tbody>
+              </table> 
+
     <section class="section">
       <div class="row">
         <div class="col-lg-6">
