--- a/src/main/resources/templates/country.html
+++ b/src/main/resources/templates/country.html
@@ -595,7 +595,7 @@
     <p></p>
    
       </form>
-   <!-- <table class="table table-hover" id="byCapital">
+    <table class="table table-hover" id="byCapital">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
@@ -612,7 +612,7 @@
                     <td th:text=${cap.code}></td>
                   </tr>
                 </tbody>
-              </table> -->
+              </table> 
             </div>
           </div>
           
