Added datatable class to table.
Added datatable class to the table to sort and limit the number of records in the table.

--- a/src/main/resources/templates/asset.html
+++ b/src/main/resources/templates/asset.html
@@ -385,7 +385,7 @@
 							<h5 class="card-title">Available Assets</h5>
 							<button type="button" class="btn btn-primary" data-bs-toggle="modal"
 								data-bs-target="#addModal" data-bs-whatever="@mdo">New Asset</button>
-							<table class="table table-hover">
+							<table class="table table-hover datatable">
 								<thead>
 									<tr>
 										<th scope="col">#</th>
