Added updated index view

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -348,6 +348,11 @@
             </a>
           </li>
           <li>
+            <a th:href="@{/asset}">
+              <i class="bi bi-circle"></i><span>Assets</span>
+            </a>
+          </li>
+          <li>
             <a th:href="@{/client}">
               <i class="bi bi-circle"></i><span>Clients</span>
             </a>
