Added report view to index page under people option. Added report option on asset page under assets. Added pie chart and line chart to report page. Updated js for report page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -353,6 +353,11 @@
             </a>
           </li>
           <li>
+            <a th:href="@{/assetreport}">
+              <i class="bi bi-circle"></i><span>Reports</span>
+            </a>
+          </li>
+          <li>
             <a th:href="@{/client}">
               <i class="bi bi-circle"></i><span>Clients</span>
             </a>
