--- a/src/main/resources/templates/storyreport.html
+++ b/src/main/resources/templates/storyreport.html
@@ -34,7 +34,7 @@
 
 	<!-- Bootstrap icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-	<title>Kindacode.com</title>
+	<title>User Story Report</title>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -304,6 +304,9 @@
 						<a th:href="@{/asset}">
 							<i class="bi bi-circle"></i><span>Assets</span>
 						</a>
+						<a th:href="@{/defect}">
+							<i class="bi bi-circle"></i><span>Defects</span>
+						</a>
 					</li>
 
 				</ul>
@@ -320,7 +323,7 @@
             </a>
           </li>
           <li>
-            <a th:href="@{/storyreport}">
+            <a href="@{/storyreport}">
               <i class="bi bi-circle"></i><span>Defect Reports</span>
             </a>
           </li>
@@ -400,9 +403,9 @@
 			<div class="row">
 				<div class="col-lg-6">
 
-					<div class="card" id="chartContainer" style="height: 400px;">
+					<div id="trafficChart" style="min-height: 400px;" class="echart">
 						<div class="card-body">
-							<h5 class="card-title">Asset Report</h5>
+							<h5 class="card-title">Pie Report</h5>
 							
 						</div>
 					</div>
@@ -423,26 +426,22 @@
 			<div class="row">
 			<div class="col-lg-6">
 
-					<div class="card" id="storycontainer" style="height: 400px;">
+					<div class="card" >
 						<div class="card-body">
-							<h5 class="card-title">Story Report</h5>
+							<h5 class="card-title">Asset Report</h5>
 							
 						</div>
 					</div>
-
+					
 				</div>
-				
-					<div class="col-lg-6">
+				<div class="card-body pb-0">
+              <h5 class="card-title">Website Traffic <span>| Today</span></h5>
 
-					<div class="card" id="prioritycontainer" style="height: 400px;">
-						<div class="card-body">
-							<h5 class="card-title">Story Report</h5>
-							
-						</div>
-					</div>
+              <div id="trafficChart" style="min-height: 400px;" class="echart"></div>
 
-				</div>
-				
+              
+
+            </div>
 			
 			</div>
 		</section>
